--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "knplabs/github-api":               "1.2.1",
         "php-64bit":                        "~5.4",
         "psr/log":                          "*",
+        "ql/hal-core":                      "~2.2@alpha",
+        "ql/mcp-cache":                     "~2.1",
         "ql/mcp-core":                      "1.*",
         "ql/mcp-corp-account":              "~0.2@rc",
         "ql/mcp-logger":                    "1.2.*",
@@ -35,9 +37,7 @@
         "symfony/dependency-injection":     "2.4.*",
         "symfony/config":                   "2.4.*",
         "symfony/yaml":                     "2.4.*",
-        "twig/twig":                        "~1.15",
-        "ql/hal-core":                      "~2.1",
-        "ql/mcp-cache":                     "~2.1"
+        "twig/twig":                        "~1.15"
     },
     "require-dev": {
         "mockery/mockery":                  "*",
