--- a/package.json
+++ b/package.json
@@ -6,22 +6,21 @@
   },
   "dependencies": {
     "gulp": "^3.6.0",
-    "gulp-compass": "^1.1.8",
     "gulp-autoprefixer": "0.0.6",
-    "gulp-load-plugins": "^0.4.0",
-    "open": "0.0.4",
-    "tiny-lr": "0.0.5",
-    "gulp-jshint": "^1.5.3",
+    "gulp-clean": "^0.2.4",
+    "gulp-compass": "^1.1.8",
     "gulp-concat": "^2.2.0",
-    "gulp-uglify": "^0.3.0",
     "gulp-if": "^1.2.0",
+    "gulp-jshint": "^1.5.3",
+    "gulp-load-plugins": "^0.4.0",
     "gulp-plumber": "^0.6.1",
+    "gulp-uglify": "^0.3.0",
+    "open": "0.0.4",
     "requirejs": "^2.1.11",
-    "gulp-imagemin": "^0.5.0",
-    "gulp-clean": "^0.2.4"
+    "tiny-lr": "0.0.5"
   },
   "devDependencies": {
-    "tiny-lr": "0.0.5",
+    "gulp-imagemin": "^0.5.0",
     "gulp-livereload": "^1.2.0"
   }
 }
