Remove login requirement for queue api

--- a/app/routes.yml
+++ b/app/routes.yml
@@ -649,12 +649,12 @@ parameters:
     api.queue:
       method: 'GET'
       route: '/api/queue'
-      stack: ['login.bouncer', 'api.queue']
+      stack: ['api.queue']
 
     api.queue.refresh:
       method: 'GET'
       route: '/api/queue-refresh/:uniqueId'
-      stack: ['login.bouncer', 'api.queue.refresh']
+      stack: ['api.queue.refresh']
       conditions:
         uniqueId: '[0-9a-z\+\-]+'
 
