Add debug controller for debugging.

--- a/app/pages.yml
+++ b/app/pages.yml
@@ -632,3 +632,6 @@ services:
   error.pages.twig:
     parent: 'twig.template'
     arguments: ['error.twig']
+
+  debug.page:
+    class: 'QL\Hal\Controllers\DebugController'
