--- a/app/routes.yml
+++ b/app/routes.yml
@@ -66,6 +66,11 @@ parameters:
       route: '/queue'
       stack: ['login.bouncer', 'queue.page']
 
+    debug:
+      method: 'GET'
+      route:  '/debug'
+      stack:  ['login.bouncer', 'debug.page']
+
     ########################################################################################################################
     # BUILD ROUTES
     ########################################################################################################################
