--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "knplabs/github-api":               "1.2.1",
         "php-64bit":                        "~5.4",
         "psr/log":                          "*",
-        "ql/hal-core":                      "~2.2@alpha",
+        "ql/hal-core":                      "~2.2",
         "ql/mcp-cache":                     "~2.1",
         "ql/mcp-core":                      "1.*",
         "ql/mcp-corp-account":              "~0.2@rc",
