Add user permissions endpoint to API.

--- a/app/api.yml
+++ b/app/api.yml
@@ -246,3 +246,12 @@ services:
       - @api.helper
       - @user.repo
       - @api.user.normalizer
+
+  api.user.permissions:
+    class: 'QL\Hal\Controllers\Api\User\UserPermissionsController'
+    arguments:
+      - @api.helper
+      - @user.repo
+      - @api.environment.normalizer
+      - @api.repository.normalizer
+      - @permissions
