--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/dependency-injection":     "2.4.*",
         "symfony/config":                   "2.4.*",
         "symfony/yaml":                     "2.4.*",
+        "symfony/debug":                    "2.5.*",
         "twig/twig":                        "~1.15"
     },
     "require-dev": {
